--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Barbara Cristina Viana">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Landing Page Profissional</title>
 </head>
 
 <body>
@@ -27,6 +27,19 @@
         <div class="action-title">
             <h2>Langing Page feita com HTML e CSS para demostração de aprendizado.</h2>
             <a class="button" href="#">Baixar uma Cópia</a>
+        </div>
+    </section>
+    <!--SECTION-2-->
+    <section class="section-2 container">
+        <h2>Níveis de Aprendizado</h2>
+        <div class="cards">
+            <div class="card">
+                <img src="images/card.png"> CSS BASICO
+            </div>
+            <div class="card"><img src="images/card.png">CSS INTERMEDIÁRIO
+            </div>
+            <div class="card"><img src="images/card.png">CSS AVANÇADO
+            </div>
         </div>
     </section>
 </body>
