--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>Níveis de Aprendizado</h2>
         <div class="cards">
             <div class="card">
-                <img src="images/card.png"> CSS BASICO
+                <img src="images/card.png"> CSS BÁSICO
             </div>
             <div class="card"><img src="images/card.png">CSS INTERMEDIÁRIO
             </div>
@@ -42,6 +42,17 @@
             </div>
         </div>
     </section>
+    <!--SECTION-3-->
+    <section class="section-3">
+        <a class="button-2">APRENDA HTML</a>
+        <h2>+ 1500 Downloads</h2>
+        <p>Mais de 1000 pessoas ja baixaram</p>
+    </section>
+    <!--footer-->
+    <footer>
+        <a class="button-footer" href="#">Baixar uma Copia</a>
+        <p>Langing Page responsiva Barbara Cristina Viana</p>
+    </footer>
 </body>
 
 </html>
