--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="action-title">
             <h2>Langing Page feita com HTML e CSS para demostração de aprendizado.</h2>
-            <a class="button" href="#">Baixar uma Cópia</a>
+            <a class="button" href="#">Baixar Cópia</a>
         </div>
     </section>
     <!--SECTION-2-->
