--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Barbara Cristina Viana">
+    <meta name="google-site-verification" content="3pSXaMMz-LaJ73GBP1LzuGZyP5-yTyJMvAUieves1RY" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Landing Page Profissional</title>
